chore: move app settings from `Web.config` to `App_Data\appSettings.config`
This change means that we can only grant access to app data rather than all of the app's files, including Web.config. Long term, it is better to remove write access to non-user-provided files so that a vulnerability in the raweb code does not allow code that executes on the server to be modified into something malicious.

--- a/aspx/wwwroot/Web.config
+++ b/aspx/wwwroot/Web.config
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-   <appSettings>
-      <add key="RegistryApps.Enabled" value="true" />
-      <add key="RegistryApps.AdditionalProperties" value="drivestoredirect:s:*;redirectclipboard:i:1" />
-   </appSettings>
+   <appSettings configSource="App_Data\appSettings.config" />
    <system.web>
       <compilation defaultLanguage="C#" targetFramework="4.0">
       </compilation>
